# ComplaintsFeedbackMechanism

./: README.md  pyproject.toml
ComplaintsFeedbackMechanism/: db.sqlite3  manage.py
ComplaintsFeedbackMechanism/ComplaintsFeedbackMechanism/: .settings.py.swp  asgi.py  settings.py  urls.py  wsgi.py
