[tool.poetry]
name = "complaintsfeedbackmechanism"
version = "0.1.0"
description = "A complaints and feedback mechanism tool"
authors = ["Brian Mc Donald <brian@brianmcdonald.me>"]
license = "GPL"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
django-environ = "^0.4.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
